@@ -36,7 +36,12 @@ Core and Builtins
 C-API
 -----
 
-- Issue #6405: Remove duplicatet type declarations in descrobject.h.
+- Issue #6151: Made PyDescr_COMMON conform to standard C (like PyObject_HEAD
+  in PEP 3123).  The PyDescr_TYPE and PyDescr_NAME macros should be
+  should used for accessing the d_type and d_name members of structures
+  using PyDescr_COMMON.
+
+- Issue #6405: Remove duplicate type declarations in descrobject.h.
 
 - The code flags for old __future__ features are now available again.
 
@@ -48,6 +53,7 @@ C-API
 
 - Issue #1419652: Change the first argument to PyImport_AppendInittab() to
   ``const char *`` as the string is stored beyond the call.
+
 
 Library
 -------
